design and deleted header

--- a/src/index.css
+++ b/src/index.css
@@ -2,66 +2,64 @@
 @tailwind components;
 @tailwind utilities;
 
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 /* body {
   font-family: 'Roboto', sans-serif;
 } */
 
+@import url("https://fonts.googleapis.com/css2?family=Kablammo&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Kablammo&display=swap');
-
-#fontChange{
-  font-family: 'Kablammo', cursive;
+#fontChange {
+  font-family: "Kablammo", cursive;
 }
 
 @font-face {
-  font-family: 'MyFont';
-  src: url('../public/font/Kablammo-Regular.ttf') format('truetype');
+  font-family: "MyFont";
+  src: url("../public/font/Kablammo-Regular.ttf") format("truetype");
   /* 다른 폰트 형식을 사용할 경우 format을 조정합니다. */
 }
 
 @font-face {
-  font-family: 'Inter';
-  src: url('../public/font/Inter.ttf') format('truetype');
+  font-family: "Inter";
+  src: url("../public/font/Inter.ttf") format("truetype");
   /* 다른 폰트 형식을 사용할 경우 format을 조정합니다. */
 }
 
 @font-face {
-  font-family: 'Montserrat';
-  src: url('../public/font/Montserrat.ttf') format('truetype');
+  font-family: "Montserrat";
+  src: url("../public/font/Montserrat.ttf") format("truetype");
   /* 다른 폰트 형식을 사용할 경우 format을 조정합니다. */
 }
 
 @font-face {
-  font-family: 'Popppins';
-  src: url('../public/font/Popppins.ttf') format('truetype');
+  font-family: "Popppins";
+  src: url("../public/font/Popppins.ttf") format("truetype");
   /* 다른 폰트 형식을 사용할 경우 format을 조정합니다. */
 }
 
 @font-face {
-  font-family: 'roboto';
-  src: url('../public/font/roboto.ttf') format('truetype');
+  font-family: "roboto";
+  src: url("../public/font/roboto.ttf") format("truetype");
   /* 다른 폰트 형식을 사용할 경우 format을 조정합니다. */
 }
 
 #fontChange {
-  font-family: 'MyFont', sans-serif;
+  font-family: "MyFont", sans-serif;
 }
 
 #fontChange {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 #fontChange {
-  font-family: 'roboto', sans-serif;
+  font-family: "roboto", sans-serif;
 }
 
 #fontChange {
-  font-family: 'Popppins', sans-serif;
+  font-family: "Popppins", sans-serif;
 }
 
 #fontChange {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
