burn and mint design

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,11 @@
   /* 다른 폰트 형식을 사용할 경우 format을 조정합니다. */
 }
 
+@font-face {
+  font-family: "enbernf";
+  src: url(../public/font/enbernf-parkgylove.ttf);
+}
+
 #fontChange {
   font-family: "MyFont", sans-serif;
 }
@@ -123,9 +128,91 @@
 }
 
 .myPageBackground {
-  background-image: url(../public/image/myPage/background6.png);
-  color: #040281;
+  background-image: url(../public/image/myPage/background2.png);
+  color: #f3f2dc;
+  background-position: center;
+  background-repeat: repeat;
+  background-size: auto;
+}
+
+.modalLetter {
+  background-image: url(../public/image/myPage/modal_letter.png);
+  color: #aa9785;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: "enbernf";
+}
+
+.container {
+  background: linear-gradient(90deg, #e0b8ab, #e4b5c7, #96bcca, #a0cac0);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+/* 굴므효과 */
+@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:200");
+
+.body {
+  background-image: url("../public/image/mint/background.png");
+  background-size: cover;
+  -webkit-animation: slidein 100s;
+  animation: slidein 100s;
+
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+}
+
+@-webkit-keyframes slidein {
+  from {
+    background-position: top;
+    background-size: 3000px;
+  }
+  to {
+    background-position: -100px 0px;
+    background-size: 2750px;
+  }
+}
+
+@keyframes slidein {
+  from {
+    background-position: top;
+    background-size: 3000px;
+  }
+  to {
+    background-position: -100px 0px;
+    background-size: 2750px;
+  }
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(75, 75, 250, 0.3);
+  border-radius: 3px;
 }
