--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,11 @@
   /* 다른 폰트 형식을 사용할 경우 format을 조정합니다. */
 }
 
+@font-face {
+  font-family: "enbernf";
+  src: url(../public/font/enbernf-parkgylove.ttf);
+}
+
 #fontChange {
   font-family: "MyFont", sans-serif;
 }
@@ -123,9 +128,18 @@
 }
 
 .myPageBackground {
-  background-image: url(../public/image/myPage/background6.png);
-  color: #040281;
+  background-image: url(../public/image/myPage/background2.png);
+  color: #f3f2dc;
+  background-position: center;
+  background-repeat: repeat;
+  background-size: auto;
+}
+
+.modalLetter {
+  background-image: url(../public/image/myPage/modal_letter.png);
+  color: #aa9785;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: "enbernf";
 }
