--- a/src/index.css
+++ b/src/index.css
@@ -251,13 +251,13 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-thumb {
   height: 30%; /* 스크롤바의 길이 */
-  background: #c7c7c7; /* 스크롤바의 색상 */
+  background: #f3eed460; /* 스크롤바의 색상 */
 
   border-radius: 10px;
 }
 
 body::-webkit-scrollbar-track {
-  background: rgba(33, 122, 244, 0.1); /*스크롤바 뒷 배경 색상*/
+  background: #f3eed460; /*스크롤바 뒷 배경 색상*/
 }
 
 /* 임의의 영역 생성 */
@@ -271,13 +271,13 @@ body::-webkit-scrollbar-track {
 
 .scrollBar::-webkit-scrollbar-thumb {
   height: 30%; /* 스크롤바의 길이 */
-  background: #c7c7c7; /* 스크롤바의 색상 */
+  background: #f3eed460; /* 스크롤바의 색상 */
 
   border-radius: 10px;
 }
 
 .scrollBar::-webkit-scrollbar-track {
-  background: rgba(33, 122, 244, 0.1); /*스크롤바 뒷 배경 색상*/
+  background: #f3eed460; /*스크롤바 뒷 배경 색상*/
 }
 
 .itemBackground {
